# nvovpn-client

./: .gitignore  CMakeLists.txt  VPN.dc.html  conanfile.py  version.h.in
.github/: ios_export_options.plist
.github/workflows/: nvovpn-ci.yml
client/: CMakeLists.txt  main.cpp  secureQSettings.cpp  secureQSettings.h  vpnConnection.cpp  vpnConnection.h
client/android/: AndroidManifest.xml  build.gradle.kts
client/android/res/values/: strings.xml
client/android/res/values-ru/: strings.xml
client/android/src/org/amnezia/vpn/: AmneziaActivity.kt
client/android/src/org/amnezia/vpn/qt/: QtAndroidController.kt
client/cmake/: android.cmake  ios.cmake  macos.cmake  macos_ne.cmake  sources.cmake
client/core/configurators/: awgConfigurator.cpp  xrayConfigurator.cpp
client/core/controllers/: coreController.cpp  coreController.h  coreSignalHandlers.cpp  coreSignalHandlers.h  gatewayController.cpp  serversController.cpp  serversController.h  updateController.cpp  updateController.h
client/core/controllers/api/: subscriptionController.cpp
client/core/controllers/selfhosted/: importController.cpp  installController.cpp
client/core/installers/: awgInstaller.cpp  openvpnInstaller.cpp  wireguardInstaller.cpp  xrayInstaller.cpp
client/core/protocols/: openVpnProtocol.cpp
client/core/repositories/: secureAppSettingsRepository.cpp
client/core/utils/: configFileParser.cpp  configFileParser.h  jsonRangeUtils.cpp  jsonRangeUtils.h
client/core/utils/containers/: containerUtils.cpp
client/core/utils/selfhosted/: sshSession.cpp
client/core/utils/serialization/: streamSettingsUtils.cpp  streamSettingsUtils.h  trojan.cpp  vless.cpp
client/images/: app.icns  images.qrc
client/ios/app/: Info.plist.in  main.entitlements
client/ios/networkextension/: CMakeLists.txt  NvoVPNNetworkExtension.entitlements
client/macos/app/: Info.plist.in  app.entitlements
client/macos/networkextension/: AmneziaVPNNetworkExtension.entitlements  CMakeLists.txt  Info.plist.in  WireGuardNetworkExtension-Bridging-Header.h  main.swift
client/mozilla/: networkwatcher.cpp
client/server_scripts/socks5_proxy/: Dockerfile
client/translations/: amneziavpn_ar_EG.ts  amneziavpn_de_DE.ts  amneziavpn_en.ts  amneziavpn_es_ES.ts  amneziavpn_fa_IR.ts  amneziavpn_fr_FR.ts  amneziavpn_hi_IN.ts  amneziavpn_it_IT.ts  amneziavpn_my_MM.ts  amneziavpn_pl_PL.ts  amneziavpn_ru_RU.ts  amneziavpn_uk_UA.ts  amneziavpn_ur_PK.ts
client/ui/controllers/: connectionUiController.cpp  ipSplitTunnelingUiController.cpp  languageUiController.cpp  settingsUiController.cpp
client/ui/controllers/api/: nvoApiController.cpp  nvoApiController.h
client/ui/controllers/qml/: pageController.cpp  pageController.h
client/ui/models/: languageModel.cpp  languageModel.h  serversModel.cpp
client/ui/models/api/: nvoServersModel.cpp  nvoServersModel.h
client/ui/qml/: main2.qml  qml.qrc
client/ui/qml/Components/: AdLabel.qml  AddSitePanel.qml  BenefitRow.qml  BenefitsPanel.qml  ConnectButton.qml  InstalledAppsDrawer.qml  QuestionDrawer.qml  SelectLanguageDrawer.qml  ServersListView.qml  SubscriptionExpiredDrawer.qml  SubscriptionPlanCard.qml  TermsAndPrivacyText.qml  TransportProtoSelector.qml
client/ui/qml/Controls2/: BackButtonType.qml  BaseHeaderType.qml  BasicButtonType.qml  BusyIndicatorType.qml  CaptchaDialogType.qml  CardType.qml  CardWithIconsType.qml  CheckBoxType.qml  DividerType.qml  DrawerType2.qml  DropDownType.qml  Header2Type.qml  HeaderTypeWithButton.qml  HorizontalRadioButton.qml  ImageButtonType.qml  LabelWithButtonType.qml  ListViewWithRadioButtonType.qml  PopupType.qml  ProgressBarType.qml  SwitcherType.qml  TabButtonType.qml  TabImageButtonType.qml  TextAreaType.qml  TextAreaWithFooterType.qml  TextFieldWithHeaderType.qml  TopCloseButtonType.qml  VerticalRadioButton.qml  WarningType.qml
client/ui/qml/Controls2/TextTypes/: BadgeTextType.qml  ButtonTextType.qml  CaptionTextType.qml  Header1TextType.qml  Header2TextType.qml  LabelTextType.qml  ListItemTitleType.qml  ParagraphTextType.qml  SmallTextType.qml
client/ui/qml/Modules/Style/: NvoStyle.qml  qmldir
client/ui/qml/Pages2/: PageHome.qml  PageNvoCountries.qml  PageNvoHome.qml  PageNvoLogin.qml  PageNvoSubscription.qml  PageProtocolOpenVpnSettings.qml  PageProtocolRaw.qml  PageProtocolXraySettings.qml  PageProtocolXraySnapshots.qml  PageProtocolXrayTransportSettings.qml  PageProtocolXrayXPaddingBytesSettings.qml  PageProtocolXrayXmuxSettings.qml  PageServiceDnsSettings.qml  PageServiceMtProxySettings.qml  PageServiceSftpSettings.qml  PageServiceSocksProxySettings.qml  PageServiceTelemtSettings.qml  PageServiceTorWebsiteSettings.qml  PageSettings.qml  PageSettingsAbout.qml  PageSettingsApiAvailableCountries.qml  PageSettingsApiNativeConfigs.qml  PageSettingsApiServerInfo.qml  PageSettingsApiSubscriptionKey.qml  PageSettingsApiSupport.qml  PageSettingsAppSplitTunneling.qml  PageSettingsApplication.qml  PageSettingsBackup.qml  PageSettingsConnection.qml  PageSettingsDns.qml  PageSettingsKillSwitchExceptions.qml  PageSettingsLogging.qml  PageSettingsServerData.qml  PageSettingsServerInfo.qml  PageSettingsServerProtocol.qml  PageSettingsSplitTunneling.qml  PageSetupWizardApiFreeInfo.qml  PageSetupWizardApiPremiumInfo.qml  PageSetupWizardApiTrialEmail.qml  PageSetupWizardConfigSource.qml  (+9 more)
client/ui/utils/: systemTrayNotificationHandler.h
cmake/: CPack.cmake  CPackOptions.cmake  sign_binaries.cmake
common/logger/: logger.cpp
deploy/: check_16kb.py  deploy_s3.sh
deploy/data/windows/: post_install.cmd  post_uninstall.cmd
deploy/installer/qif/: componentscript.js  controlscript.js
deploy/installer/wix/: close_client_patch.xml  service_install_patch.xml
ipc/: ipcserver.cpp
recipes/amnezia-libxray/: conanfile.py
recipes/amnezia-xray-bindings/: conanfile.py
recipes/libssh/: conanfile.py
recipes/openvpn/: conanfile.py
service/: CMakeLists.txt
service/server/: CMakeLists.txt  amneziavpn-service.rc.in  localserver.cpp
tests/: CMakeLists.txt  test_ipaddress.cpp  test_network_utilities.cpp  test_serialization.cpp  test_utilities.cpp
